tests/baselines/reference/typeGuardInClass(strict=true).errors.txt
typeGuardInClass.ts(3,12): error TS2454: Variable 'x' is used before being assigned.
typeGuardInClass.ts(6,17): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
typeGuardInClass.ts(13,17): error TS2322: Type 'string | number' is not assignable to type 'number'.
  Type 'string' is not assignable to type 'number'.


==== typeGuardInClass.ts (3 errors) ====
    let x: string | number;
    
    if (typeof x === "string") {
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
        let n = class {
            constructor() {
                let y: string = x;
                    ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
            }
        }
    }
    else {
        let m = class {
            constructor() {
                let y: number = x;
                    ~
!!! error TS2322: Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
            }
        }
    }
    